--- a/YSAudioEngine/Base.lproj/Main_iPhone.storyboard
+++ b/YSAudioEngine/Base.lproj/Main_iPhone.storyboard
@@ -106,6 +106,16 @@
                                     <action selector="crowd3:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="KTN-um-0JD"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yUt-hM-m6d">
+                                <rect key="frame" x="128" y="530" width="64" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Stop ALL">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="stopAll:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="9L6-sv-H8S"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
